--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>第九天到十一天-百度前端设计学院</title>
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1254426_chnaao7heu.css"/>
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat"/>
 </head>
 <body>
     <div class="container">
@@ -110,20 +111,22 @@
         </section>
         <section class="feature14">
             <!-- feature #14 -->
-				<div class="flex">
-					<img src="images/img1.jpg" >
-					<div class="list">
-						<p class="title">Learn How to Improve Your Personal Business</p>
-						<p class="subtitle">Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+				<div class="content">
+					<div class="flex">
+						<img src="images/img1.jpg" >
+						<div class="list">
+							<p class="title">Learn How to Improve Your Personal Business</p>
+							<p class="subtitle">Li Jun, a China Academy of Engineering academician and also director of the alliance's experts' committee, said that China will also launch design guidance for smart cars, smart map architecture and standards for test grounds.</p>
+						</div>
 					</div>
-				</div>
-				<div class="flex">
-					
-					<div class="list">
-						<p class="title">Choose Between Two Beautifully Designed Color Schemes.</p>
-						<p class="subtitle">China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+					<div class="flex">
+						
+						<div class="list">
+							<p class="title">Choose Between Two Beautifully Designed Color Schemes.</p>
+							<p class="subtitle">China will come up with its own smart car standards, traffic rules, laws and regulations relating to safety, according to the China Industry Innovation Alliance for the Intelligent and Connected Vehicles.</p>
+						</div>
+						<img src="images/img2.jpg" >
 					</div>
-					<img src="images/img2.jpg" >
 				</div>
         </section>
         <section class="team4">
@@ -137,7 +140,7 @@
 							<img class="photo" src="images/p1.jpg" >
 							<div class="hover" style="display: block;">
 								<p class="name">Ethan Dutton</p>
-								<p class="desc">Senior Visual Designer</p>
+								<p class="desc">SENIORenior Visual Designer</p>
 								<div class="flex">
 									<i class="iconfont iconfacebook"></i>
 									<i class="iconfont icontwitter"></i>
@@ -191,14 +194,14 @@
             <!-- contact #1 -->
 			<div class="content flex">
 				<div class="form">
-					<h3>Fell free to Write Us</h3>
+					<h3>FELL FREE TO WRITE US</h3>
 					<input type="text" name=""  placeholder="E-mail"/>
 					<input type="text" name=""  placeholder="Subject"/>
 					<textarea  placeholder="Message"></textarea>
 					<button type="button">Send</button>
 				</div>
 				<div class="contact">
-					<h2 class="title">Contacts</h2>
+					<p class="title">Contacts</p>
 					<p class="subtitle">
 						Make any design your own using the Style Editor. Personalize fonts, colors, and layouts to create the custom look you want.
 					</p>
@@ -225,7 +228,7 @@
 				<ul class="flex">
 					<li>
 						<ul class="row">
-							<li class="frist"><a href="">Learn More</a></li>
+							<li class="frist"><a href="">LEARN MORE</a></li>
 							<li><a href="">How it works?</a></li>
 							<li><a href="">Meeting tools</a></li>
 							<li><a href="">Live streaming</a></li>
@@ -234,7 +237,7 @@
 					</li>
 					<li>
 						<ul class="row">
-							<li class="frist"><a href="">About Us</a></li>
+							<li class="frist"><a href="">ABOUT US</a></li>
 							<li><a href="">About us</a></li>
 							<li><a href="">Features</a></li>
 							<li><a href="">Privacy police</a></li>
@@ -243,7 +246,7 @@
 					</li>
 					<li>
 						<ul class="row">
-							<li  class="frist"><a href="">Support</a></li>
+							<li  class="frist"><a href="">SUPPORT</a></li>
 							<li><a href="">F.A.Q.</a></li>
 							<li><a href="">Contact us</a></li>
 							<li><a href="">Live chat</a></li>
@@ -252,7 +255,7 @@
 					</li>
 					<li class="last">
 						<ul class="row">
-							<li  class="frist"><a href="">Enjoy your Life</a></li>
+							<li  class="frist"><a href="">ENJOY YOUR LIFE</a></li>
 							<li class="desc"><p>Great web UI kit for designers, freelancers or business.</p></li>
 							<li>
 								<ul class="flex">
